--- a/style/components/image-uploader.css
+++ b/style/components/image-uploader.css
@@ -11,6 +11,7 @@
 .image-uploader:after {
   content: "\e145";
   font-family: "Material Icons";
+  color: var(--color-body-light);
   font-size: 2rem;
   position: absolute;
   top: 2rem;
