--- a/style/normalize.css
+++ b/style/normalize.css
@@ -19,6 +19,7 @@ p {
 
 button,
 input,
-select {
+select,
+textarea {
   font-size: 1rem;
 }
